--- a/TSmartClinic.Presentation/Views/Configuracoes/Configuracoes.cshtml
+++ b/TSmartClinic.Presentation/Views/Configuracoes/Configuracoes.cshtml
@@ -56,6 +56,27 @@
         </div>
 
         <div class="col-md-4 mb-4">
+            <div class="card card-menu h-100 shadow-sm position-relative bg-light-blue ">
+                <div class="card-body text-center d-flex flex-column">
+                    <!-- Ícone com degradê -->
+                    <div class="gradient-icon mb-3">
+                        <i class="fa fa-users"></i>
+                    </div>
+
+                    <h5 class="card-title">Cadastro de Perfis</h5>
+                    <p class="card-description text-muted">
+                        Gerencie os dados dos perfis de acesso ao sistema.
+                    </p>
+                    <!-- Botão com degradê -->
+                    <a href="@Url.Action("Consulta", "Perfis")"
+                       class="btn btn-gradient mt-auto">
+                        <i class="fa fa-chevron-right"></i>&nbsp;Acessar
+                    </a>                    
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-4">
             <div class="card card-menu h-100 shadow-sm position-relative bg-light-blue disabled-card">
                 <!-- Selo "Em breve" no canto -->
                 <div class="card-overlay">
@@ -66,9 +87,9 @@
                     <div class="gradient-icon mb-3">
                         <i class="fa fa-users"></i>
                     </div>
-                    <h5 class="card-title">Cadastro de Perfis</h5>
+                    <h5 class="card-title">Cadastro de Clientes</h5>
                     <p class="card-description text-muted">
-                        Gerencie os dados dos perfis de acesso ao sistema.
+                        Gerencie os dados dos clientes do sistema.
                     </p>
 
                     <a href="#" class="btn btn-gradient mt-auto disabled" tabindex="-1" aria-disabled="true">
@@ -77,8 +98,6 @@
                 </div>
             </div>
         </div>
-
-
 
     </div>
 </div>
