--- a/TSmartClinic.Presentation/Views/Perfis/Cadastro.cshtml
+++ b/TSmartClinic.Presentation/Views/Perfis/Cadastro.cshtml
@@ -52,15 +52,14 @@
                         </div>
 
                         <div class="col-lg-3">
-                            <label for="NichoId">Área de Atuação</label>
+                            <label for="NichoId">Nicho</label>
                             <select id="NichoId" name="NichoId" class="form-select" asp-for="NichoId" asp-items="@ViewBag.Risco">
-                                <option value="">Selecione a Area de Atuação</option>
+                                <option value="">Selecione a Área de Atuação</option>
                             </select>
                             <span class="text-danger">
                                 @Html.ValidationMessageFor(model => model.NichoId)
                             </span>
                         </div>
-
                     </div>
 
                     <div class="row mt-3">
@@ -88,7 +87,6 @@
                                 </label>
                             </div>
                         </div>
-
                     </div>
 
 
