Ajuste no perfil nichos, e segurança p usuario master

--- a/TSmartClinic.Presentation/Views/Perfis/Cadastro.cshtml
+++ b/TSmartClinic.Presentation/Views/Perfis/Cadastro.cshtml
@@ -53,7 +53,7 @@
 
                         <div class="col-lg-3">
                             <label for="NichoId">Nicho</label>
-                            <select id="NichoId" name="NichoId" class="form-select" asp-for="NichoId" asp-items="@ViewBag.Risco">
+                            <select id="NichoId" name="NichoId" class="form-select" asp-for="NichoId" asp-items="@ViewBag.Nichos">
                                 <option value="">Selecione a Área de Atuação</option>
                             </select>
                             <span class="text-danger">
