--- a/TSmartClinic.Presentation/Views/Shared/_HomeLayout.cshtml
+++ b/TSmartClinic.Presentation/Views/Shared/_HomeLayout.cshtml
@@ -9,8 +9,8 @@
 @{
     var nome = HttpContextAccessor.HttpContext.Session.GetString("Usuario_Nome");
     var email = HttpContextAccessor.HttpContext.Session.GetString("Usuario_Email");
-    var nomeClinica = HttpContextAccessor.HttpContext.Session.GetString("Clinica_Nome");
-    var nomeCnpj = HttpContextAccessor.HttpContext.Session.GetString("Clinica_Cnpj");
+    var nomeClinica = HttpContextAccessor.HttpContext.Session.GetString("Cliente_Nome");
+    var nomeCnpj = HttpContextAccessor.HttpContext.Session.GetString("Cliente_Cnpj");
 }
 
 
