--- a/TSmartClinic.Presentation/Views/Perfis/Cadastro.cshtml
+++ b/TSmartClinic.Presentation/Views/Perfis/Cadastro.cshtml
@@ -1,8 +1,20 @@
-﻿@model TSmartClinic.Presentation.Models.PerfilViewModel
+﻿@using Microsoft.AspNetCore.Http
+@using TSmartClinic.Presentation.Services.Interfaces
+@inject IUsuarioLogadoService UsuarioLogado
+@model TSmartClinic.Presentation.Models.PerfilViewModel
+@inject IHttpContextAccessor HttpContextAccessor
+
 @{
     Layout = "~/Views/Shared/_HomeLayout.cshtml";
     ViewBag.Titulo = "Cadastro de Perfis";
 }
+
+@{
+    var user = HttpContextAccessor.HttpContext?.User;
+}
+<p>Usuário Master? @UsuarioLogado.UsuarioMaster</p>
+<p>Id do Usuário: @UsuarioLogado.UsuarioLogadoId</p>
+<p>Tipo Usuário: @UsuarioLogado.TipoUsuario</p>
 
 @using (Html.BeginForm())
 {
@@ -10,7 +22,7 @@
     {
         <input asp-for="Id" type="hidden" />
     }
-
+   
     <div class="card">
         <div class="card-body">
             <ul class="nav nav-tabs" role="tablist" id="tabBusca">
@@ -51,15 +63,18 @@
                             </span>
                         </div>
 
-                        <div class="col-lg-3">
-                            <label for="NichoId">Nicho</label>
-                            <select id="NichoId" name="NichoId" class="form-select" asp-for="NichoId" asp-items="@ViewBag.Nichos">
-                                <option value="">Selecione a Área de Atuação</option>
-                            </select>
-                            <span class="text-danger">
-                                @Html.ValidationMessageFor(model => model.NichoId)
-                            </span>
-                        </div>
+                        @if ((bool)ViewBag.UsuarioMaster)
+                        {
+                            <div class="col-lg-3">
+                                <label for="NichoId">Nicho</label>
+                                <select id="NichoId" name="NichoId" class="form-select" asp-for="NichoId" asp-items="@ViewBag.Nichos">
+                                    <option value="">Selecione a Área de Atuação</option>
+                                </select>
+                                <span class="text-danger">
+                                    @Html.ValidationMessageFor(model => model.NichoId)
+                                </span>
+                            </div>
+                        }
                     </div>
 
                     <div class="row mt-3">
