Correção do gravação de dados da sessão.

--- a/TSmartClinic.Presentation/Views/Home/Index.cshtml
+++ b/TSmartClinic.Presentation/Views/Home/Index.cshtml
@@ -17,9 +17,10 @@
 @{
    
     var teste = usuarioLogadoService.TipoUsuario;
-    var teste2 = usuarioLogadoService.ClienteId;
+    var teste2 = usuarioLogadoService.NomeCliente;
     var teste3 = usuarioLogadoService.UsuarioMaster;
     var teste4 = usuarioLogadoService.UsuarioLogadoId;
+    var teste5 = usuarioLogadoService.ClienteId;
 }
 
 
