--- a/TSmartClinic.Presentation/Views/Perfis/Cadastro.cshtml
+++ b/TSmartClinic.Presentation/Views/Perfis/Cadastro.cshtml
@@ -15,6 +15,7 @@
 <p>Usuário Master? @UsuarioLogado.UsuarioMaster</p>
 <p>Id do Usuário: @UsuarioLogado.UsuarioLogadoId</p>
 <p>Tipo Usuário: @UsuarioLogado.TipoUsuario</p>
+<p>Tipo Usuário: @UsuarioLogado.NomeCliente</p>
 
 @using (Html.BeginForm())
 {
