Ajustes  no perfil

--- a/TSmartClinic.Presentation/Views/Home/Index.cshtml
+++ b/TSmartClinic.Presentation/Views/Home/Index.cshtml
@@ -21,6 +21,7 @@
     var teste3 = usuarioLogadoService.UsuarioMaster;
     var teste4 = usuarioLogadoService.UsuarioLogadoId;
     var teste5 = usuarioLogadoService.ClienteId;
+    var teste6 = usuarioLogadoService.NichoClienteId;
 }
 
 
@@ -89,6 +90,8 @@
     <span class="fw-bold text-uppercase mb-1">teste2: @teste2</span>
     <span class="fw-bold text-uppercase mb-1">teste3: @teste3</span>
     <span class="fw-bold text-uppercase mb-1">teste4: @teste4</span>
+    <span class="fw-bold text-uppercase mb-1">teste5: @teste5</span>
+    <span class="fw-bold text-uppercase mb-1">teste6: @teste6</span>
 </div>
 
 <!-- Chart.js -->
