--- a/TSmartClinic.Presentation/Views/Perfis/Cadastro.cshtml
+++ b/TSmartClinic.Presentation/Views/Perfis/Cadastro.cshtml
@@ -68,17 +68,31 @@
                         {
                             <div class="col-lg-3">
                                 <label for="NichoId">Nicho</label>
+                                <i class="fa-solid fa-crown" title="Usuário Master" style="color: gold; margin-left: 5px;"></i>
                                 <select id="NichoId" name="NichoId" class="form-select" asp-for="NichoId" asp-items="@ViewBag.Nichos">
                                     <option value="">Selecione a Área de Atuação</option>
                                 </select>
+                            
                                 <span class="text-danger">
                                     @Html.ValidationMessageFor(model => model.NichoId)
                                 </span>
                             </div>
                         }
+
                     </div>
 
                     <div class="row mt-3">
+                        <div class="col-lg-3">
+                            <label for="NichoId">Nicho</label>
+                            <i class="fa-solid fa-crown" title="Usuário Master" style="color: gold; margin-left: 5px;"></i>
+                            <select id="NichoId" name="NichoId" class="form-select" asp-for="NichoId" asp-items="@ViewBag.Nichos">
+                                <option value="">Selecione a Área de Atuação</option>
+                            </select>
+
+                            <span class="text-danger">
+                                @Html.ValidationMessageFor(model => model.NichoId)
+                            </span>
+                        </div>
                         <!-- Chave Seletora Agendamento (Switch) -->
                         <div class="col-md-2 d-flex align-items-center">
                             <div class="form-check form-switch">
