--- a/TSmartClinic.Presentation/Views/Perfis/Cadastro.cshtml
+++ b/TSmartClinic.Presentation/Views/Perfis/Cadastro.cshtml
@@ -23,7 +23,7 @@
     {
         <input asp-for="Id" type="hidden" />
     }
-   
+
     <div class="card">
         <div class="card-body">
             <ul class="nav nav-tabs" role="tablist" id="tabBusca">
@@ -64,24 +64,6 @@
                             </span>
                         </div>
 
-                        @if ((bool)ViewBag.UsuarioMaster)
-                        {
-                            <div class="col-lg-3">
-                                <label for="NichoId">Nicho</label>
-                                <i class="fa-solid fa-crown" title="Usuário Master" style="color: gold; margin-left: 5px;"></i>
-                                <select id="NichoId" name="NichoId" class="form-select" asp-for="NichoId" asp-items="@ViewBag.Nichos">
-                                    <option value="">Selecione a Área de Atuação</option>
-                                </select>
-                            
-                                <span class="text-danger">
-                                    @Html.ValidationMessageFor(model => model.NichoId)
-                                </span>
-                            </div>
-                        }
-
-                    </div>
-
-                    <div class="row mt-3">
                         <div class="col-lg-3">
                             <label for="NichoId">Nicho</label>
                             <i class="fa-solid fa-crown" title="Usuário Master" style="color: gold; margin-left: 5px;"></i>
@@ -93,6 +75,21 @@
                                 @Html.ValidationMessageFor(model => model.NichoId)
                             </span>
                         </div>
+                    </div>
+
+                  
+                    <div class="row mt-3">
+                        <div class="col-lg-3">
+                            <label for="ClienteId">Cliente</label>
+                            <select id="ClienteId" name="ClienteId" class="form-select" asp-for="ClienteId" asp-items="@ViewBag.Clientes">
+                                <option value="">Selecione o Cliente</option>
+                            </select>
+
+                            <span class="text-danger">
+                                @Html.ValidationMessageFor(model => model.ClienteId)
+                            </span>
+                        </div>
+
                         <!-- Chave Seletora Agendamento (Switch) -->
                         <div class="col-md-2 d-flex align-items-center">
                             <div class="form-check form-switch">
@@ -104,7 +101,6 @@
                                 </label>
                             </div>
                         </div>
-
 
                         <!-- Chave Seletora Agendamento (Switch) -->
                         <div class="col-md-2 d-flex align-items-center">
