AJuste na persistência de dados e gravação do perfil.

--- a/TSmartClinic.Presentation/Views/Perfis/Consulta.cshtml
+++ b/TSmartClinic.Presentation/Views/Perfis/Consulta.cshtml
@@ -16,12 +16,12 @@
                     <span class="d-none d-sm-block">Busca padrão</span>
                 </a>
             </li>
-            <li class="nav-item">
+           @*  <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="tab" href="#busca_avancada" role="tab">
                     <span class="d-block d-sm-none"><i class="fas fa-search"></i></span>
                     <span class="d-none d-sm-block">Busca avançada</span>
                 </a>
-            </li>
+            </li> *@
         </ul>
 
         <div class="tab-content pt-3 text-muted">
