--- a/TSmartClinic.Presentation/Views/Perfis/Cadastro.cshtml
+++ b/TSmartClinic.Presentation/Views/Perfis/Cadastro.cshtml
@@ -12,10 +12,10 @@
 @{
     var user = HttpContextAccessor.HttpContext?.User;
 }
-<p>Usuário Master? @UsuarioLogado.UsuarioMaster</p>
+@* <p>Usuário Master? @UsuarioLogado.UsuarioMaster</p>
 <p>Id do Usuário: @UsuarioLogado.UsuarioLogadoId</p>
 <p>Tipo Usuário: @UsuarioLogado.TipoUsuario</p>
-<p>Nome Cliente: @UsuarioLogado.NomeCliente</p>
+<p>Nome Cliente: @UsuarioLogado.NomeCliente</p> *@
 
 @using (Html.BeginForm())
 {
@@ -33,11 +33,18 @@
                         <span class="d-none d-sm-block">Dados Gerais</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-bs-toggle="tab" href="#config_permissoes" role="tab">
+                        <span class="d-block d-sm-none"><i class="fas fa-search"></i></span>
+                        <span class="d-none d-sm-block">Configurar Permissões</span>
+                    </a>
+                </li>
             </ul>
 
             <div class="tab-content">
-                <div class="tab-pane active" id="dados_gerais" role="tabpanel">
-                    <!-- Conteúdo da aba Dados Gerais -->
+                <!-- Aba Dados Gerais -->
+                <div class="tab-pane fade show active" id="dados_gerais" role="tabpanel">
+                    <!-- TODO: Seu conteúdo de Dados Gerais aqui -->
 
                     <div class="row mt-3">
                         <div class="col-md-4">
@@ -81,7 +88,7 @@
 
                     </div>
 
-                  
+
                     <div class="row mt-3">
                         <div class="col-lg-3">
                             <label for="ClienteId">Cliente</label>
@@ -104,7 +111,7 @@
                             </div>
                         </div>
 
-                       @*  <!-- Chave Seletora Agendamento (Switch) -->
+                        @*  <!-- Chave Seletora Agendamento (Switch) -->
                         <div class="col-md-2 d-flex align-items-center mt-4">
                             <div class="form-check form-switch">
                                 <input class="form-check-input" type="checkbox" id="ClienteSwitch" />
@@ -115,35 +122,41 @@
                         </div> *@
                     </div>
 
-
-                    <div class="mt-3 row">
-                        <div class="col-md-2">
-                            <label>Situação</label>
-                            <select asp-for="Ativo" class="form-select" disabled="@(!Model.Id.HasValue ? "disabled" : null)">
-                                <option value="true">Ativo</option>
-                                <option value="false">Inativo</option>
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="mt-3">
-                        <input type="submit"
-                               value="Gravar"
-                               onclick="loading()"
-                               class="btn btn-success" />
-
-                        @if (Model.Id.HasValue)
-                        {
-                            <input asp-action="Excluir"
-                                   type="submit"
-                                   value="Excluir"
-                                   onclick="loading()"
-                                   class="btn btn-danger" />
-                        }
-
-                        <a href="/Perfis/Consulta" class="btn btn-secondary">Voltar</a>
-                    </div>
                 </div>
+
+                <!-- Aba Configurar Permissões -->
+                <div class="tab-pane fade" id="config_permissoes" role="tabpanel">
+                    <!-- TODO: Seu conteúdo de Configurar Permissões aqui -->
+                    <h1>Pemissões</h1>
+                </div>
+            </div>
+
+            <div class="mt-3 row">
+                <div class="col-md-2">
+                    <label>Situação</label>
+                    <select asp-for="Ativo" class="form-select" disabled="@(!Model.Id.HasValue ? "disabled" : null)">
+                        <option value="true">Ativo</option>
+                        <option value="false">Inativo</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="mt-3">
+                <input type="submit"
+                       value="Gravar"
+                       onclick="loading()"
+                       class="btn btn-success" />
+
+                @if (Model.Id.HasValue)
+                {
+                    <input asp-action="Excluir"
+                           type="submit"
+                           value="Excluir"
+                           onclick="loading()"
+                           class="btn btn-danger" />
+                }
+
+                <a href="/Perfis/Consulta" class="btn btn-secondary">Voltar</a>
             </div>
         </div>
     </div>
